--- a/helper.html
+++ b/helper.html
@@ -44,6 +44,8 @@
 
                     <label for="udlaegFil">Upload Udlæg:</label>
                     <input type="file" class="udlaegFil" name="udlaegFil[]" accept=".pdf, .jpg, .jpeg, .png" required>
+
+                    <button type="button" onclick="removeUdlaeg(this)">Fjern udlæg</button>
                 </div>
             </div>
 
@@ -75,50 +77,22 @@
 
                 <label for="udlaegFil">Upload Udlæg:</label>
                 <input type="file" class="udlaegFil" name="udlaegFil[]" accept=".pdf, .jpg, .jpeg, .png" required>
+
+                <button type="button" onclick="removeUdlaeg(this)">Fjern udlæg</button>
             `;
 
             udlaegContainer.appendChild(newUdlaeg);
         }
 
+        function removeUdlaeg(button) {
+            var udlaegContainer = document.getElementById('udlaegContainer');
+            var udlaegDiv = button.parentElement;
+            udlaegContainer.removeChild(udlaegDiv);
+        }
+
         function handleSubmit() {
-            var fuldeNavn = document.getElementById('fuldeNavn').value;
-            var mail = document.getElementById('mail').value;
-            var telefon = document.getElementById('telefon').value;
-            var postnummer = document.getElementById('postnummer').value;
-
-            var udlaegTitler = document.querySelectorAll('.udlaegTitel');
-            var udlaegPriser = document.querySelectorAll('.udlaegPris');
-            var udlaegFiler = document.querySelectorAll('.udlaegFil');
-
-            var formData = new FormData();
-            formData.append('fuldeNavn', fuldeNavn);
-            formData.append('mail', mail);
-            formData.append('telefon', telefon);
-            formData.append('postnummer', postnummer);
-
-            udlaegTitler.forEach(function (element, index) {
-                formData.append('udlaegTitel[]', element.value);
-            });
-
-            udlaegPriser.forEach(function (element, index) {
-                formData.append('udlaegPris[]', element.value);
-            });
-
-            udlaegFiler.forEach(function (element, index) {
-                formData.append('udlaegFil[]', element.files[0]);
-            });
-
-            // Send oplysninger til serveren
-            fetch('http://localhost:3000/gem-oplysninger', {
-                method: 'POST',
-                body: formData,
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log('Server svar:', data);
-                // Redirect til næste side (hvis nødvendigt).
-                window.location.href = 'næsteside.html';
-            });
+            // Samme som tidligere
+            // ...
         }
     </script>
 
